Change style of resizer, add two column layout && fix bug (position of out of container)

--- a/app/assets/stylesheets/content/work_packages/resizer/resizer.sass
+++ b/app/assets/stylesheets/content/work_packages/resizer/resizer.sass
@@ -1,4 +1,6 @@
 .work-packages--resizer
   position: absolute
   top: 50%
-  cursor: pointer
+  cursor: col-resize
+  color: grey
+  font-size: 14px
