--- a/app/assets/stylesheets/layout/_work_packages_details_view.sass
+++ b/app/assets/stylesheets/layout/_work_packages_details_view.sass
@@ -42,6 +42,16 @@ body.action-create
     // Will eventually be overridden by the resizer
     flex-basis: 580px
 
+    &.-columns-2
+      .-columns-2
+        column-count: 2
+        column-gap: 4rem
+
+        .attributes-key-value
+          -webkit-column-break-inside: avoid
+          page-break-inside: avoid
+          break-inside: avoid
+
 .work-packages--details
   height: 100%
   position: relative
